syntax = "proto3";

package travelingman;

option go_package = "github.com/va6996/travelingman/pb";

import "google/protobuf/timestamp.proto";
import "protos/itinerary.proto";

// Node represents a location/place in the itinerary graph
// It maps to protobuf structures: TripDay, Place, Accommodation
message Node {
    string id = 1;                                    // Unique identifier for the node
    string location = 2;                              // Name or address of the location
    google.protobuf.Timestamp from_timestamp = 3;     // Arrival time at this node
    google.protobuf.Timestamp to_timestamp = 4;       // Departure time from this node
    bool is_inter_city = 5;                           // Whether this node represents an inter-city travel point
    Accommodation stay = 6;                           // Hotel/accommodation info (from Accommodation)
    repeated Accommodation stayOptions = 7;           // List of possible accommodations
    Graph sub_graph = 8;                              // Sub-graph for daily activities
}

// Edge represents transportation between two locations
// It maps to protobuf structures: Transport
message Edge {
    string from_id = 1;                               // ID of the source node
    string to_id = 2;                                 // ID of the destination node
    int64 duration_seconds = 3;                       // Duration of travel in seconds
    Transport transport = 4;                          // Full Transport struct from Transport
    repeated Transport transportOptions = 5;          // List of possible transports
}

// Graph represents the complete graph structure of a user's itinerary
message Graph {
    repeated Node nodes = 1;                           // List of nodes in the graph
    repeated Edge edges = 2;                           // List of edges in the graph
    Graph sub_graph = 3;                              // For intra-city details (contains Places)
}

enum JourneyType {
    JOURNEY_TYPE_UNSPECIFIED = 0;
    JOURNEY_TYPE_ONE_WAY = 1;
    JOURNEY_TYPE_RETURN = 2;
    JOURNEY_TYPE_MULTI_CITY = 3;
    JOURNEY_TYPE_OPEN_JAW = 4;
    JOURNEY_TYPE_CIRCLE_TRIP = 5;
}

message Itinerary {
    int64 id = 1;
    int64 group_id = 2;
    int32 day_number = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 5;
    string title = 6;
    string description = 7;
    Graph graph = 8;
    int32 travelers = 9;
    repeated string tags = 10;
    JourneyType journey_type = 11;
}